# todo-service

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  main.py  models.py  prompts.py
app/services/: aggregator.py  llm_parser.py  todoist.py
app/static/: index.html
